--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -7,8 +7,38 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Phillies Questionnaire</title>
+   <style>
+      h1, h3 {
+         text-align: center;
+      }
+      span {
+         color: green;
+      }
+
+      .column {
+         float: left;
+         width: 48%;
+         padding: 5px;
+      }
+
+      .row::after {
+         content: "";
+         clear: both;
+         display: table;
+      }
+   </style>
 </head>
 <body>
-   <img src="{{ image }}" alt="test image">
+   <h1>Qualifying Offer Value for {{ year }}</h1>
+   <h3>The average of the 125 highest salaries: <span>{{ average_salary }} </span></h3>
+   <div class="row">
+      <div class="column">
+         <img src="{{ image_all }}" alt="Hist of all salaries">
+      </div>
+      <div class="column">
+         <img src="{{ image_top }}" alt ="Hist of top 125 salaries">
+      </div>
+   </div>
+   
 </body>
 </html>
